--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -128,3 +128,8 @@ margin-right: 8px;
   margin-left: 8px;
   margin-right: 8px;
 }
+
+#custom-spotify-status {
+    margin-left: 8px;
+    margin-right: 8px;
+}
